[gd_scene load_steps=17 format=3 uid="uid://c2vkffksnltf4"]

[ext_resource type="Script" uid="uid://c004r4qmg3tjl" path="res://scenes/BattleScene/battle_scene.gd" id="1_3eieg"]
[ext_resource type="Texture2D" uid="uid://8pr4v8vmh0do" path="res://assets/bg-1.jpeg" id="2_3eieg"]
[ext_resource type="Texture2D" uid="uid://d2f7q8ndqes88" path="res://assets/Ícones/bottom-pannel.png" id="3_8k8re"]
[ext_resource type="Texture2D" uid="uid://d1fbcbai5joti" path="res://assets/moldura-melhor.png" id="3_th8rj"]
[ext_resource type="Theme" uid="uid://blui5ab8achhi" path="res://assets/meu_tema.tres" id="4_i6wy2"]
[ext_resource type="Texture2D" uid="uid://bcytntoxjq0ll" path="res://assets/bordas.png" id="5_1kx8p"]
[ext_resource type="Texture2D" uid="uid://jlsq224evttm" path="res://assets/fundo-preto.png" id="5_erplg"]
[ext_resource type="Texture2D" uid="uid://d3ka2vaeu1nuo" path="res://assets/fundo-botão-hover.png" id="6_th8rj"]
[ext_resource type="Texture2D" uid="uid://bojp58sxdodns" path="res://assets/progress-green.png" id="7_ilgx7"]
[ext_resource type="Texture2D" uid="uid://bi71ewu2tyw3l" path="res://assets/botão-fundo-black.png" id="9_8ty6f"]
[ext_resource type="Texture2D" uid="uid://be4g632xw6nvt" path="res://assets/icone-ataque.png" id="11_8ty6f"]
[ext_resource type="Texture2D" uid="uid://bdf3rwhdsn7vp" path="res://assets/button-detactivated-sla.png" id="11_handr"]
[ext_resource type="Texture2D" uid="uid://bc10bg2df2bgp" path="res://assets/icone-defender.png" id="12_handr"]
[ext_resource type="Texture2D" uid="uid://y06tyjglw18v" path="res://assets/icone-item.png" id="13_888n0"]
[ext_resource type="Texture2D" uid="uid://dm4de3i78g8t4" path="res://assets/icone-pular-turno1.png" id="14_mttxc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i6wy2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_3eieg")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_3eieg")
expand_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19500001
anchor_top = 0.2680556
anchor_right = 0.78700006
anchor_bottom = 0.7456667
offset_left = -0.6000061
offset_top = 18.0
offset_right = 0.6398926
offset_bottom = 0.11999512
theme_override_constants/separation = 12
metadata/_edit_use_anchors_ = true

[node name="EnemiesArea" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 20

[node name="EnemyBackRow" type="VBoxContainer" parent="HBoxContainer/EnemiesArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="EnemyFrontRow" type="VBoxContainer" parent="HBoxContainer/EnemiesArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="AlliesArea" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 20

[node name="AllyFrontRow" type="VBoxContainer" parent="HBoxContainer/AlliesArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="AllyBackRow" type="VBoxContainer" parent="HBoxContainer/AlliesArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Moldura" type="TextureRect" parent="CanvasLayer"]
custom_minimum_size = Vector2(150, 150)
anchors_preset = -1
anchor_left = 0.076000005
anchor_top = 0.771
anchor_right = 0.193
anchor_bottom = 0.97900003
offset_left = -0.2800064
offset_top = -0.11999512
offset_right = -0.040008545
offset_bottom = 0.11999512
size_flags_horizontal = 8
size_flags_vertical = 12
texture = ExtResource("3_th8rj")
expand_mode = 1

[node name="BottomPanel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 0.75100005
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.27996826
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_i6wy2")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BottomPanel"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 140)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.011000001
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.030999899
grow_horizontal = 2
grow_vertical = 0

[node name="CanvasLayer" type="CanvasLayer" parent="CanvasLayer/BottomPanel/HBoxContainer"]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/CanvasLayer"]
modulate = Color(1, 1, 1, 0.7254902)
anchors_preset = -1
anchor_top = 0.749
anchor_right = 1.0020001
anchor_bottom = 0.9990001
offset_top = -0.2800293
offset_right = -0.5600586
offset_bottom = -0.2800293
size_flags_horizontal = 3
texture = ExtResource("3_8k8re")

[node name="CharacterStatus" type="HBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(400, 140)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="CharacterIcon" type="CanvasLayer" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus"]

[node name="CharacterIcon" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus/CharacterIcon"]
custom_minimum_size = Vector2(130, 130)
anchors_preset = -1
anchor_left = 0.08400001
anchor_top = 0.78300005
anchor_right = 0.185
anchor_bottom = 0.96400005
offset_left = -0.5200043
offset_top = 0.23999023
offset_right = 0.19999695
offset_bottom = -0.08001709
size_flags_horizontal = 8
size_flags_vertical = 12
expand_mode = 1

[node name="VBoxContainer" type="CanvasLayer" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus"]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus/VBoxContainer"]
custom_minimum_size = Vector2(120, 90)
anchors_preset = -1
anchor_left = 0.201
anchor_top = 0.79200006
anchor_right = 0.31
anchor_bottom = 0.95300007
offset_left = -0.27999878
offset_top = -0.24005127
offset_right = 0.2000122
offset_bottom = -0.16003418
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.3
theme_override_constants/separation = 8

[node name="CharacterName" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("4_i6wy2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HPBar" type="TextureProgressBar" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
texture_under = ExtResource("5_erplg")
texture_over = ExtResource("5_1kx8p")
texture_progress = ExtResource("7_ilgx7")
texture_progress_offset = Vector2(0, 1)

[node name="HPLabel" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus/VBoxContainer/VBoxContainer/HPBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_i6wy2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="APBar" type="TextureProgressBar" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
texture_under = ExtResource("5_erplg")
texture_over = ExtResource("5_1kx8p")
texture_progress = ExtResource("7_ilgx7")
texture_progress_offset = Vector2(0, 1)

[node name="APLabel" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/CharacterStatus/VBoxContainer/VBoxContainer/APBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_i6wy2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackMenu" type="CanvasLayer" parent="CanvasLayer/BottomPanel/HBoxContainer"]

[node name="AttackMenu" type="ScrollContainer" parent="CanvasLayer/BottomPanel/HBoxContainer/AttackMenu"]
custom_minimum_size = Vector2(140, 0)
anchors_preset = -1
anchor_left = 0.44000003
anchor_top = 0.771
anchor_right = 0.549
anchor_bottom = 0.9760001
offset_left = -0.2000122
offset_top = -1.1199951
offset_right = 0.27996826
offset_bottom = 0.27996826
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AttackButtons" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer/AttackMenu/AttackMenu"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="CommandMenu" type="CanvasLayer" parent="CanvasLayer/BottomPanel/HBoxContainer"]

[node name="CommandMenu" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu"]
custom_minimum_size = Vector2(0, 140)
anchors_preset = -1
anchor_left = 0.31800002
anchor_top = 0.77500004
anchor_right = 0.42700002
anchor_bottom = 0.98200005
offset_left = -0.040039063
offset_right = 0.44000244
offset_bottom = -0.040039063
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="FightButton" type="TextureButton" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
theme = ExtResource("4_i6wy2")
texture_normal = ExtResource("9_8ty6f")
texture_hover = ExtResource("6_th8rj")
texture_disabled = ExtResource("11_handr")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/FightButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_top = 0.033
anchor_right = 0.97900003
anchor_bottom = 0.90000004
offset_left = -0.060001373
offset_top = 0.00999999
offset_right = -0.05999756
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_i6wy2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Atacar"
vertical_alignment = 2
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/FightButton"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.16700001
anchor_right = 0.22900002
anchor_bottom = 0.83300006
offset_left = -0.03999996
offset_top = -0.010000229
offset_right = -0.060001373
offset_bottom = 0.0099983215
texture = ExtResource("11_8ty6f")
expand_mode = 1

[node name="DefendButton" type="TextureButton" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
theme = ExtResource("4_i6wy2")
texture_normal = ExtResource("9_8ty6f")
texture_hover = ExtResource("6_th8rj")
texture_disabled = ExtResource("11_handr")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/DefendButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_top = 0.033
anchor_right = 0.97900003
anchor_bottom = 0.90000004
offset_left = -0.060001373
offset_top = 0.00999999
offset_right = -0.05999756
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_i6wy2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Defender"
vertical_alignment = 2
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/DefendButton"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.071
anchor_top = 0.133
anchor_right = 0.22900002
anchor_bottom = 0.83300006
offset_left = 2.0599995
offset_top = 1.01
offset_right = -0.060001373
offset_bottom = 0.0099983215
texture = ExtResource("12_handr")
expand_mode = 1

[node name="ItemsButton" type="TextureButton" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
theme = ExtResource("4_i6wy2")
texture_normal = ExtResource("9_8ty6f")
texture_hover = ExtResource("6_th8rj")
texture_disabled = ExtResource("11_handr")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/ItemsButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_top = 0.033
anchor_right = 0.97900003
anchor_bottom = 0.90000004
offset_left = -0.060001373
offset_top = 0.00999999
offset_right = -0.05999756
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_i6wy2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Items"
vertical_alignment = 2
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/ItemsButton"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.16700001
anchor_right = 0.22900002
anchor_bottom = 0.83300006
offset_left = -0.03999996
offset_top = -0.010000229
offset_right = -0.060001373
offset_bottom = 0.0099983215
texture = ExtResource("13_888n0")
expand_mode = 1

[node name="SkipButton" type="TextureButton" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu"]
custom_minimum_size = Vector2(140, 30)
layout_mode = 2
theme = ExtResource("4_i6wy2")
texture_normal = ExtResource("9_8ty6f")
texture_hover = ExtResource("6_th8rj")
texture_disabled = ExtResource("11_handr")
ignore_texture_size = true
stretch_mode = 3

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/SkipButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.279
anchor_top = 0.033
anchor_right = 0.97900003
anchor_bottom = 0.90000004
offset_left = -0.060001373
offset_top = 0.00999999
offset_right = -0.05999756
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_i6wy2")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Pular"
vertical_alignment = 2
uppercase = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/CommandMenu/CommandMenu/SkipButton"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.16700001
anchor_right = 0.22900002
anchor_bottom = 0.83300006
offset_left = -0.03999996
offset_top = -0.010000229
offset_right = -0.060001373
offset_bottom = 0.0099983215
texture = ExtResource("14_mttxc")
expand_mode = 1

[node name="TargetMenu" type="CanvasLayer" parent="CanvasLayer/BottomPanel/HBoxContainer"]

[node name="TargetMenu" type="ScrollContainer" parent="CanvasLayer/BottomPanel/HBoxContainer/TargetMenu"]
custom_minimum_size = Vector2(150, 0)
anchors_preset = -1
anchor_left = 0.44000003
anchor_top = 0.771
anchor_right = 0.591
anchor_bottom = 0.9760001
offset_left = -0.2000122
offset_top = -0.11999512
offset_right = -0.4800415
offset_bottom = 0.27996826
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="TargetButtons" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer/TargetMenu/TargetMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_i6wy2")
theme_override_constants/separation = 8
alignment = 1
